--- a/BugTracker/Web/BugTracker.Web/Views/_ViewImports.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using BugTracker.Web
-@using BugTracker.Web.Models
+@using BugTracker.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
