Made the create action for the company use viewModel

--- a/BugTracker/Web/BugTracker.Web/Views/Company/Create.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Company/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BugTracker.Data.Models.Company
+﻿@model BugTracker.Web.ViewModels.CompanyViewModels.AddCompanyViewModel
 
 @{
     ViewData["Title"] = "Create";
