--- a/BugTracker/Web/BugTracker.Web/Views/Shared/_Layout.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                         @if (SignInManager.IsSignedIn(User))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Company">Companies</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Companies" asp-action="Index">Companies</a>
                             </li>
                         }
                     </ul>
