--- a/BugTracker/Web/BugTracker.Web/Views/Projects/Details.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Projects/Details.cshtml
@@ -53,7 +53,9 @@
     }
 </div>
 <div>
-    <a asp-action="Join" asp-route-id="@Model.Id">Join</a>
+    <a asp-action="Join" asp-route-id="@Model.Id">Join</a>  |
+    <a asp-action="Report" asp-route-id="@Model.Id">Report a bug</a>  |
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a>  |
     <a asp-action="Index">Back to List</a>
 </div>
 
