--- a/BugTracker/Web/BugTracker.Web/Views/Projects/ReportBug.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Projects/ReportBug.cshtml
@@ -1,7 +1,45 @@
-﻿
+﻿@model BugTracker.Web.ViewModels.Projects.ReportBugProjectViewModel
+
 @{
     ViewData["Title"] = "ReportBug";
 }
 
-<h1>ReportBug</h1>
-
+<h1>Report Bug</h1>
+<h4>@Model.ProjectName</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="ProjectId" />
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Priority" class="control-label"></label>
+                <input asp-for="Status" class="form-control" />
+                <span asp-validation-for="Status" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Severity" class="control-label"></label>
+                <textarea asp-for="Severity" class="form-control" rows="3"></textarea>
+                <span asp-validation-for="Severity" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Status" class="control-label"></label>
+                <textarea asp-for="Status" class="form-control" rows="3"></textarea>
+                <span asp-validation-for="Status" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DueDate" class="control-label"></label>
+                <textarea asp-for="DueDate" class="form-control" rows="3"></textarea>
+                <span asp-validation-for="DueDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
