Added bug details view and configured the bugs service

--- a/BugTracker/Web/BugTracker.Web/Views/Companies/Create.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Companies/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BugTracker.Web.ViewModels.CompanyViewModels.AddCompanyViewModel
+﻿@model BugTracker.Web.ViewModels.Companies.AddCompanyViewModel
 
 @{
     ViewData["Title"] = "Create";
