--- a/BugTracker/Web/BugTracker.Web/Views/Projects/Details.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Projects/Details.cshtml
@@ -55,7 +55,7 @@
                             @Html.DisplayName(bug.Severity)
                         </td>
                         <td>
-                            <a asp-action="Detalis" asp-controller="Bugs" asp-route-id="@bug.Id">Bug Details</a>
+                            <a asp-action="Details" asp-controller="Bugs" asp-route-id="@bug.Id">Bug Details</a>
                         </td>
                     </tr>
                 </tbody>
