--- a/BugTracker/Web/BugTracker.Web/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model PersonalDataModel
+@model PersonalData
 @{
     ViewData["Title"] = "Personal Data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
