--- a/BugTracker/Web/BugTracker.Web/Views/Companies/Index.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Companies/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BugTracker.Data.Models.Company>
+﻿@model BugTracker.Web.ViewModels.Companies.IndexViewModel
 
 @{
     ViewData["Title"] = "All Companies";
@@ -6,31 +6,27 @@
 
 <h1>All Companies</h1>
 
+@if (TempData["message"] != null)
+{
+    <p class="alert alert-danger text-center">@TempData["message"]</p>
+}
+
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
+<h4>Name</h4>
+<div class="row">
+    @foreach (var item in Model.Companies)
+    {
+        <div class="card w-100">
+            <div class="card-body">
+                <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
+                <p class="card-text">@Html.DisplayFor(modelitem => item.Description)</p>
                 <a asp-action="Join" asp-route-id="@item.Id">Join</a> |
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+            </div>
+        </div>
+    }
+</div>
