Added automapper to Project View Models. Added templated search by id.

--- a/BugTracker/Web/BugTracker.Web/Views/Companies/Delete.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Companies/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BugTracker.Data.Models.Company
+﻿@model BugTracker.Web.ViewModels.Companies.DeleteCompanyViewModel
 
 @{
     ViewData["Title"] = "Delete";
