--- a/BugTracker/Web/BugTracker.Web/Views/Companies/Join.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Companies/Join.cshtml
@@ -1,4 +1,4 @@
-﻿@model BugTracker.Data.Models.Company
+﻿@model BugTracker.Web.ViewModels.Companies.JoinCompanyViewModel
 
 @{
     ViewData["Title"] = "Join";
