--- a/BugTracker/Web/BugTracker.Web/Views/Projects/Create.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Projects/Create.cshtml
@@ -27,6 +27,11 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="CompanyName" class="control-label"></label>
+                <select asp-for="CompanyName" asp-items="@(new SelectList(Model.CompaniesList, "Id", "CompanyName"))" class="form-control"></select>
+                <span asp-validation-for="CompanyName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
