Added delete view to a projects. Created a table for the bugs in project details.

--- a/BugTracker/Web/BugTracker.Web/Views/Bugs/Details.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Bugs/Details.cshtml
@@ -39,5 +39,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to List</a> |
+    <a asp-action="Details" asp-controller="Projects" asp-route-id="@Model.ProjectId">Project Info</a>
 </div>
