--- a/BugTracker/Web/BugTracker.Web/Views/Companies/Index.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Companies/Index.cshtml
@@ -8,7 +8,7 @@
 
 @if (TempData["message"] != null)
 {
-    <p class="alert alert-danger text-center">@TempData["message"]</p>
+    <div class="alert alert alert-danger text-center">@TempData["message"]</div>
 }
 
 <p>
