--- a/BugTracker/Web/BugTracker.Web/Views/Projects/Create.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Projects/Create.cshtml
@@ -12,9 +12,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="ProjectName" class="control-label"></label>
+                <input asp-for="ProjectName" class="form-control" />
+                <span asp-validation-for="ProjectName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
@@ -27,9 +27,9 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CompanyName" class="control-label"></label>
-                <select asp-for="CompanyName" asp-items="@(new SelectList(Model.CompaniesList, "Id", "CompanyName"))" class="form-control"></select>
-                <span asp-validation-for="CompanyName" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <select asp-for="Name" asp-items="@(new SelectList(Model.CompaniesList, "Id", "Name"))" class="form-control"></select>
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
