--- a/BugTracker/Web/BugTracker.Web/Views/Projects/Index.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Projects/Index.cshtml
@@ -12,7 +12,7 @@
 <hr class="w-100" />
 @if (TempData["message"] != null)
 {
-    <p class="alert alert-danger text-center">@TempData["message"]</p>
+    <div class="alert alert-danger text-center">@TempData["message"]</div>
 }
 
 @if (Model.Projects != null)
@@ -32,6 +32,9 @@
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => projectData.Bugs)
+                </th>
+                <th class="text-hide">
+
                 </th>
             </tr>
         </thead>
