Added projects to the administrationn area

--- a/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Companies/Edit.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Companies/Edit.cshtml
@@ -72,7 +72,7 @@
 }
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-primary"asp-action="AdminIndex">Back to Companies list</a>
 </div>
 
 @section Scripts {
