--- a/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Companies/AdminIndex.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Companies/AdminIndex.cshtml
@@ -6,7 +6,7 @@
 
     <h1>@ViewData["Title"]</h1>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
 <div class="row">
     @foreach (var item in Model.Companies)
@@ -15,8 +15,10 @@
             <div class="card-body">
                 <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
                 <p class="card-text">@Html.DisplayFor(modelitem => item.Description)</p>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
+                <p class="card-text">Projects: @Html.DisplayFor(modelItem => item.Projects.Count)</p>
+                <a class="btn btn-primary" asp-action="Create" asp-controller="Projects" asp-route-id="@item.Id">Create a Project</a> 
+                <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
+                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a> 
             </div>
         </div>
     }
