--- a/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Projects/Create.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Projects/Create.cshtml
@@ -39,7 +39,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-secondary" asp-controller="Companies" asp-action="AdminIndex">Back to companies list</a>
 </div>
 
 @section Scripts {
