--- a/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Projects/Delete.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Projects/Delete.cshtml
@@ -41,6 +41,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a class="btn btn-primary" asp-controller="Companies" asp-action="Index">Back to companies list</a>
     </form>
 </div>
