--- a/BugTracker/Web/BugTracker.Web/Views/Companies/Details.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Companies/Details.cshtml
@@ -43,14 +43,6 @@
                 </dl>
                 <dl class="row">
                     <dt class="col-sm-2">
-                        @Html.DisplayNameFor(model => project.Description)
-                    </dt>
-                    <dd class="col-sm-10">
-                        @Html.DisplayFor(model => project.Description)
-                    </dd>
-                </dl>
-                <dl class="row">
-                    <dt class="col-sm-2">
                         @Html.DisplayNameFor(model => project.Bugs)
                     </dt>
                     <dd class="col-sm-10">
@@ -62,6 +54,9 @@
     }
 
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @if (this.User.IsInRole("CompanyAdministrator"))
+    {
+        <a class="btn btn-primary" asp-area="Administration" asp-controller="Companies" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+    }
+    <a class="btn btn-primary" asp-action="Index">Back to List</a>
 </div>
