--- a/BugTracker/Web/BugTracker.Web/Views/Projects/Report.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Projects/Report.cshtml
@@ -19,6 +19,11 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <textarea cols="40" rows="10" asp-for="Description" class="form-control "></textarea>
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Priority" class="control-label"></label>
                 <select asp-for="Priority" asp-items="Html.GetEnumSelectList<Priority>()" class="form-control"></select>
                 <span asp-validation-for="Priority" class="text-danger"></span>
@@ -35,12 +40,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="DueDate" class="control-label"></label>
-                <input asp-for="DueDate" class="form-control" value="@DateTime.UtcNow.Year"/>
+                <input asp-for="DueDate" class="form-control" value="@DateTime.UtcNow.Year" />
                 <span asp-validation-for="DueDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Report" class="btn btn-primary" />
             </div>
+            <a class="btn btn-secondary" asp-action="Details" asp-route-id="@Model.ProjectId">Back to Project details</a>
         </form>
     </div>
 </div>
